tema 3 responsive all done

--- a/tema2.html
+++ b/tema2.html
@@ -98,14 +98,14 @@
         <a id="arrow2" class="arrow_down_link arrow_tema2" href="#mobile_galleri"></a>
       </article>
       <article class="triangle_up"></article>
-      <article id="mobile_galleri" class="triangle_middle">
+      <article id="mobile_galleri" class="triangle_middle nodesktop">
         <figure><img src="content/tema_2/img1.png" alt="img1" /></figure>
         <figure><img src="content/tema_2/img2.png" alt="img2" /></figure>
         <figure><img src="content/tema_2/img3.png" alt="img3" /></figure>
         <figure><img src="content/tema_2/img4.png" alt="img4" /></figure>
       </article>
       <article id="galleri_padding" class="triangle_middle">
-        <figure id="desktop_galleri">
+        <figure id="desktop_galleri1">
           <img src="content/tema_2/img1.png" alt="img1" />
         </figure>
       </article>
