--- a/tema3.html
+++ b/tema3.html
@@ -66,7 +66,7 @@
       <article class="triangle_down"></article>
       <article id="tema_2_1" class="no_triangle">
         <h2>1.Prototype 2</h2>
-        <p class="to_left even">
+        <p class="to_right even">
           I tema 3 har vi lært om UX og UI. Der. Skulle vi lave en prototype af
           et e-shop som i udgangspunkt sælger t-shirts og så 2 andre produkter.
           Mit fiktivt e-shop blev kaldt for MERCH’LAB. Der sælger jeg hoodies
@@ -82,7 +82,7 @@
           rigtig kunne se hvordan det hjalp mig på trods at jeg hvor vigtigt det
           er.
         </p>
-        <p class="to_left even">
+        <p class="to_right even">
           Der skulle også laves papir prototype før det og styletiles/moodboards
           til det. Her er der et lille galleri af noget af forarbejdet.
         </p>
@@ -91,15 +91,19 @@
           href="https://xd.adobe.com/view/05bc0318-068b-4781-96d0-72113e2ee4b2-50ef/?fullscreen&hints=on"
           >Link til prototypen.</a
         >
-        <p class="to_left even">
+        <p class="to_right even">
           Et lille galleri med screenshots af processen og prototypen.
         </p>
       </article>
       <article class="arrow_galleri">
-        <a id="arrow2" class="arrow_down_link arrow_tema2" href="#"></a>
+        <a
+          id="arrow2"
+          class="arrow_down_link arrow_tema2"
+          href="#href_galleri_1"
+        ></a>
       </article>
-      <article class="triangle_up middle"></article>
-      <article id="mobile_galleri1" class="triangle_middle">
+      <article id="href_galleri_1" class="triangle_up middle"></article>
+      <article id="mobile_galleri1" class="triangle_middle middle">
         <h3>DESIGN</h3>
         <figure>
           <img src="content/tema_3/prototype2/design/img1.png" alt="img1" />
@@ -114,7 +118,7 @@
           <img src="content/tema_3/prototype2/design/img4.png" alt="img4" />
         </figure>
       </article>
-      <article id="mobile_galleri2" class="triangle_middle">
+      <article id="mobile_galleri2" class="triangle_middle middle">
         <h3>PAPIR PROTOTYPE</h3>
         <figure>
           <img src="content/tema_3/prototype2/papir/img10.png" alt="img10" />
@@ -135,7 +139,7 @@
           <img src="content/tema_3/prototype2/papir/img9.png" alt="img9" />
         </figure>
       </article>
-      <article id="mobile_galleri3" class="triangle_middle">
+      <article id="mobile_galleri3" class="triangle_middle middle">
         <h3>WEB PROTOTYPE (hifi)</h3>
         <figure>
           <img
@@ -176,8 +180,8 @@
           />
         </figure>
       </article>
-      <article class="triangle_middle middle">
-        <h3>DESIGN</h3>
+      <article class="triangle_middle middle desktop_h3">
+        <h3 class="desktop_h3">DESIGN</h3>
         <div id="img_galleri1"></div>
         <img class="border2" src="assets/border2.svg" alt="border2" />
         <div id="arrow_system1">
@@ -190,9 +194,9 @@
           />
         </div>
       </article>
-      <article class="triangle_down middle"></article>
-      <article class="no_triangle">
-        <h3>PAPIR PROTOTYPE</h3>
+      <article class="triangle_down middle desktop_h3"></article>
+      <article class="no_triangle desktop_h3">
+        <h3 class="desktop_h3">PAPIR PROTOTYPE</h3>
         <div id="img_galleri2"></div>
         <img class="border3" src="assets/border3.svg" alt="border3" />
         <div id="arrow_system2">
@@ -205,9 +209,9 @@
           />
         </div>
       </article>
-      <article class="triangle_up"></article>
-      <article class="triangle_middle">
-        <h3>WEB PROTOTYPE (hifi)</h3>
+      <article class="triangle_up desktop_h3"></article>
+      <article class="triangle_middle desktop_h3">
+        <h3 class="desktop_h3">WEB PROTOTYPE (hifi)</h3>
         <div id="img_galleri3"></div>
         <img class="border4" src="assets/border1.svg" alt="border1" />
         <div id="arrow_system3">
@@ -220,10 +224,36 @@
           />
         </div>
       </article>
-      <article class="triangle_down"></article>
+      <article id="nodesktop" class="triangle_down middle"></article>
+      <article class="triangle_down desktop_h3"></article>
       <!-- anden h2 -->
       <article id="tema_2_2" class="no_triangle">
-        <h2>2.Pitch</h2>
+        <h2 class="to_right">2.Pitch</h2>
+        <p class="even">
+          Pitch’en gik ud på at vi skulle (ja sjovt nok) pitche vores e-shop til
+          en af lærerne. Jeg valgte at pitche mit på et lidt dramatisk/teatralsk
+          måde. Det var en meget god oplevelse fordi jeg lærte at jeg faktisk
+          godt kunne snakke foran nogle mennesker og præsentere et projekt på en
+          god måde. Min metode hjalp med nerverne, det virkede som et
+          performance hvor der så kunne stilles spørgsmål bagefter.
+        </p>
+        <p class="to_right odd">Pitch slideshow.</p>
+      </article>
+      <article class="arrow_galleri">
+        <a
+          id="arrow3"
+          class="arrow_down_link arrow_tema2"
+          href="#href_galleri2"
+        ></a>
+      </article>
+      <article class="triangle_up"></article>
+      <article id="href_galleri2" class="triangle_middle padding_bottom">
+        <h3 class="padding_bottom">Pitch deck</h3>
+        <figure id="desktop_galleri2">
+          <img src="content/tema_3/pitch/1.png" alt="img1" />
+        </figure>
+        <img class="border5" src="assets/border2.svg" alt="border2" />
+      </article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
