--- a/tema4.html
+++ b/tema4.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tema 4</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tema.css" />
   </head>
   <body>
     <header>
       <div id="headerid">
-         <div>
-        <a href="index.html"
-          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
-        /></a>
-        <a href="index.html"
-          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a></div>
+        <div>
+          <a href="index.html"
+            ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+          /></a>
+          <a href="index.html"
+            ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+          /></a>
+        </div>
+        <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
             <li><a href="index.html">Home</a></li>
@@ -54,7 +57,85 @@
       </div>
       <div class="top_separator"></div>
     </header>
-    <main></main>
+    <main>
+      <article id="tema1" class="triangle_middle index_article">
+        <h1 class="number">4</h1>
+        <a id="two" class="index_link" href="tema4.html">Tema</a>
+      </article>
+      <article class="triangle_down"></article>
+      <article id="tema_2_1" class="no_triangle">
+        <h2>click spil</h2>
+        <p class="to_right even">
+          Tema 4: animation var at lave et click spil ved brug af javascript.
+          Lave spil gaphics og indsætte lyd og finde et gameplay (lave
+          aktivitetsdiagram og state machine diagram). Vi lærte derfor basic
+          Javascript til det. Det først var at tænke på hvad spillet kunne
+          handle om, derefter var det om at lave en papirprototype.
+        </p>
+      </article>
+      <article class="arrow_galleri">
+        <a id="arrow4" class="arrow_down_link" href="#youtube2"></a>
+      </article>
+      <article class="triangle_up"></article>
+      <article id="youtube2" class="triangle_middle index_article">
+        <iframe
+          id="desktop_spil_prototype"
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/yjfvt-5zy64"
+          title="YouTube video player"
+          frameborder="20"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <a
+          id="youtubevideo_2"
+          class="linkmobile"
+          href="https://www.youtube.com/embed/yjfvt-5zy64"
+          >Click on me to go to the video</a
+        >
+        <img class="border6" src="assets/border1.svg" alt="border1" />
+      </article>
+      <article class="triangle_down"></article>
+      <article id="tema_2_1" class="no_triangle">
+        <p class="to_right even">
+          Så skulle tegne og lave assets til spillet og finde ud af css
+          animationer for at give liv til spillet. Her er et lille galleri med
+          lidt af dokumentations website og nogle af mine assets til spillet.
+        </p>
+        <p class="odd">
+          Det website jeg lavede til ende projektet er simpelthen ikke
+          responsivt nok i forhold til alt det vi havde lært der. Og det skyldes
+          at min datter var syg og jeg blev selv syg efter hende og derfor
+          manglede tid. Med mere tid vil jeg implementere flere media queries.
+        </p>
+
+        <p class="to_right even">
+          Et lille galleri med screenshots af processen og websitet.
+        </p>
+      </article>
+      <article class="arrow_galleri">
+        <a id="arrow5" class="arrow_down_link" href="#href_galleri_4"></a>
+      </article>
+      <article id="href_galleri_4" class="triangle_up middle"></article>
+      <article id="mobile_galleri4" class="triangle_middle middle">
+        <figure>
+          <img src="content/tema_4/img1.png" alt="img1" />
+        </figure>
+        <figure>
+          <img src="content/tema_4/img2.png" alt="img2" />
+        </figure>
+        <figure>
+          <img src="content/tema_4/img3.png" alt="img3" />
+        </figure>
+        <figure>
+          <img src="content/tema_4/img4.png" alt="img4" />
+        </figure>
+        <figure>
+          <img src="content/tema_4/img5.png" alt="img5" />
+        </figure>
+      </article>
+    </main>
     <footer>
       <div class="bottom_separator"></div>
       <div id="footerid">
