tema 4 responsive done

--- a/tema3.html
+++ b/tema3.html
@@ -224,7 +224,7 @@
           />
         </div>
       </article>
-      <article id="nodesktop" class="triangle_down middle"></article>
+      <article class="triangle_down middle nodesktop"></article>
       <article class="triangle_down desktop_h3"></article>
       <!-- anden h2 -->
       <article id="tema_2_2" class="no_triangle">
