--- a/tema4.html
+++ b/tema4.html
@@ -7,6 +7,7 @@
     <title>Tema 4</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="tema.css" />
+    <link rel="stylesheet" href="galleries.css" />
   </head>
   <body>
     <header>
@@ -76,8 +77,8 @@
       <article class="arrow_galleri">
         <a id="arrow4" class="arrow_down_link" href="#youtube2"></a>
       </article>
-      <article class="triangle_up"></article>
-      <article id="youtube2" class="triangle_middle index_article">
+      <article class="triangle_up middle"></article>
+      <article id="youtube2" class="triangle_middle index_article middle">
         <iframe
           id="desktop_spil_prototype"
           width="560"
@@ -96,8 +97,8 @@
         >
         <img class="border6" src="assets/border1.svg" alt="border1" />
       </article>
-      <article class="triangle_down"></article>
-      <article id="tema_2_1" class="no_triangle">
+      <article class="triangle_down middle"></article>
+      <article id="tema_2_3" class="no_triangle">
         <p class="to_right even">
           Så skulle tegne og lave assets til spillet og finde ud af css
           animationer for at give liv til spillet. Her er et lille galleri med
@@ -117,8 +118,8 @@
       <article class="arrow_galleri">
         <a id="arrow5" class="arrow_down_link" href="#href_galleri_4"></a>
       </article>
-      <article id="href_galleri_4" class="triangle_up middle"></article>
-      <article id="mobile_galleri4" class="triangle_middle middle">
+      <article id="href_galleri_4" class="triangle_up"></article>
+      <article id="mobile_galleri4" class="triangle_middle">
         <figure>
           <img src="content/tema_4/img1.png" alt="img1" />
         </figure>
@@ -135,6 +136,19 @@
           <img src="content/tema_4/img5.png" alt="img5" />
         </figure>
       </article>
+      <article class="triangle_middle desktop_h3 padding_top">
+        <div id="img_galleri4"></div>
+        <img class="border7" src="assets/border3.svg" alt="border3" />
+        <div id="arrow_system1">
+          <img id="arrow_left4" src="assets/arrow_left1.svg" alt="arrowleft1" />
+          <img src="assets/separator2.svg" alt="separator2" />
+          <img
+            id="arrow_right4"
+            src="assets/arrow_left2.svg"
+            alt="arrowleft2"
+          />
+        </div>
+      </article>
     </main>
     <footer>
       <div class="bottom_separator"></div>
@@ -150,5 +164,6 @@
       </div>
     </footer>
     <script src="script.js"></script>
+    <script src="galleryt4.js"></script>
   </body>
 </html>
