tema5 mobile done

--- a/tema5.html
+++ b/tema5.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tema 5</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tema.css" />
   </head>
   <body>
     <header>
       <div id="headerid">
         <div>
-        <a href="index.html"
-          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
-        /></a>
-        <a href="index.html"
-          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a></div>
+          <a href="index.html"
+            ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+          /></a>
+          <a href="index.html"
+            ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+          /></a>
+        </div>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -55,7 +57,148 @@
       </div>
       <div class="top_separator"></div>
     </header>
-    <main></main>
+    <main>
+      <article id="tema1" class="triangle_middle index_article">
+        <h1 class="number">5</h1>
+        <a id="two" class="index_link" href="tema5.html">Tema</a>
+      </article>
+      <article class="triangle_down"></article>
+      <article id="tema_2_4" class="no_triangle">
+        <h2>1.Pilot projekt</h2>
+        <p class="to_right even">
+          Tema 5: Indhold har været det mest udfordrende for mig fordi vi har
+          skulle lære hele premiere pro software og hvordan man klipper både
+          film og lyde. Det havde jeg aldrig prøvet før.
+        </p>
+        <p class="odd">
+          Pilotprojekt var gruppearbejde indenfor vores egen gruppe. Sammen med
+          Isabell gik vi ud og interviewede Kira som er frisør samt filme hende
+          og b-rolls. Vi tog også mage billeder. Det vi har lært efter at have
+          prøvet at klippe filmen var at det ville have været smart at filme
+          b-rolls både horizontalt og vertikalt, altså de samme shots. Det ville
+          have gjort klipningen meget nemmere. Vi glemte også at sync lyden.
+        </p>
+        <p class="to_right even">
+          Min metode har været at klippe i lyden og så finde klips som passer
+          fint ind.
+        </p>
+        <a
+          class="odd"
+          href="http://emsportfolio.dk/kea/05_indhold/01_pilot/pilot_website/"
+          >Link til websitet.</a
+        >
+      </article>
+      <article class="arrow_galleri">
+        <a id="arrow6" class="arrow_down_link" href="#"></a>
+      </article>
+      <article class="triangle_up middle"></article>
+      <article id="youtube3" class="triangle_middle index_article middle">
+        <h3 class="desktop_h3">PILOT video</h3>
+        <iframe
+          id="desktop_pilot"
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/d36tHM1wtRA"
+          title="YouTube video player"
+          frameborder="20"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <a
+          id="youtubevideo_3"
+          class="linkmobile"
+          href="https://www.youtube.com/embed/yjfvt-5zy64"
+          >Click on me to go to the video</a
+        >
+        <img class="border6" src="assets/border1.svg" alt="border1" />
+      </article>
+      <article class="triangle_down middle"></article>
+      <article id="tema_2_5" class="no_triangle">
+        <h3 class="desktop_h3">2.Redesign opgave</h3>
+        <p class="to_right even">
+          Redesign projekt var gruppearbejde som krævede at vi sammen lavet
+          gruppekontrakt og fandt en virksomhed som havde brug for et redesign.
+          Vi har fået lavet et trello board og holdt scrum møder hverdag. Vi
+          valgt Isabellas tantes fodklinik i Valby.
+        </p>
+        <p class="odd">
+          Vi skulle lave noget desk research for at starte med. Vi indelte
+          opgaverne mellem hinanden og havde et fælles google doc for at dele
+          det vi lavet med de andre, samt en messenger gruppe for at kommunikere
+          hurtigt.
+        </p>
+
+        <p class="to_right even">
+          Vi fik en lille interview af Isabellas tante og lavet bert test på den
+          gammel website for at starte med. Vi fik ikke nok svar på den for at
+          det kunne give mening at bruge dataen. Heuristisk test og lighthouse
+          test blev lavet mens jeg lod syg sammen med min datter (igen).
+        </p>
+        <p class="odd">
+          Det var meget krævende at arbejde i gruppe i forhold til selv, jeg vil
+          sige at ca. halvdelen af arbejdet var at blive enig om tingene.
+        </p>
+
+        <p class="to_right even">
+          Vi var ude og filme og tage billeder og snakke med Isabellas tante.
+          Med alle vores billeder og hendes ideer lavet vi en palette for
+          websitet. Vi inddelte de forskellige sider af websitet mellem hinanden
+          sådan at vi havde en hver. Jeg fokuserede på behandlingernes side. Jeg
+          lavet et burger menu før vi blev undervist i det, det lykkes men det
+          var måske et fejl fra min side af. Jeg har lært at skulle tage tingene
+          lidt af gang og stille og roligt samt at skulle dokumentere absolut
+          alt af mit arbejde for at kunne fortælle det til andre.
+        </p>
+        <p class="odd">
+          Det har været det mest udfordrende for mig i hele semestret, derfor
+          har jeg også lært meget. Vores dokumentation valgt vi at lave på
+          slides.
+        </p>
+      </article>
+      <article class="arrow_galleri">
+        <a id="arrow7" class="arrow_down_link" href="#href_protoptype"></a>
+      </article>
+      <article id="href_protoptype" class="triangle_up"></article>
+      <article class="triangle_middle index_article">
+        <a
+          class="linkmobile"
+          href="https://docs.google.com/presentation/d/1TzKXD1-xXRF0GW1AzP8Y6vn7c-jhTiVg6qKu1jQzI-w/edit?usp=sharing"
+          >Her er dokumentations slideshow</a
+        >
+      </article>
+      <article class="triangle_down"></article>
+      <article id="tema_2_4" class="no_triangle">
+        <p class="to_right even">
+          Jeg var på teams på dagen hvor vi skulle fremlægge fordi jeg stadig
+          lod syg hjemme. Og det gik fint selvom det var lidt forvirrende. Det
+          at skulle præsentere noget som har taget så lang tid og så mange
+          overvejleser i så kort tid er meget svært. Jeg lærte der at komme ind
+          til kærnen og udvlægle det vigtiste.
+        </p>
+        <p class="odd">
+          Pga. af sygdommen har jeg ikke lavet min side så god som jeg synes den
+          kunne have været blevet. Den mangler noget mere responsivt kodning og
+          sikkert noget mere css for at være pænere og mere funktionelt.
+        </p>
+        <p class="to_right even">
+          Vi brugte også for første gang et fælles git repo, det er meget
+          spændende at se alle de mugligheder der er med den funktion. Det er
+          helt klart et rigtig vigtigt værktøj som giver mange mugliheder og
+          gøre det meget nemmere at arbejde fælles om det samme ting.
+        </p>
+      </article>
+      <article class="arrow_galleri">
+        <a id="arrow8" class="arrow_down_link" href="#href_redesign"></a>
+      </article>
+      <article class="triangle_up middle"></article>
+      <article id="href_redesign" class="triangle_middle index_article middle">
+        <a
+          class="linkmobile"
+          href="https://valby-fodklinik-redesign.netlify.app/"
+          >Link til redesignet website.
+        </a>
+      </article>
+    </main>
     <footer>
       <div class="bottom_separator"></div>
       <div id="footerid">
