tema 5 responsive done

--- a/tema5.html
+++ b/tema5.html
@@ -83,7 +83,7 @@
           fint ind.
         </p>
         <a
-          class="odd"
+          class="even to_right"
           href="http://emsportfolio.dk/kea/05_indhold/01_pilot/pilot_website/"
           >Link til websitet.</a
         >
@@ -93,7 +93,7 @@
       </article>
       <article class="triangle_up middle"></article>
       <article id="youtube3" class="triangle_middle index_article middle">
-        <h3 class="desktop_h3">PILOT video</h3>
+        <h3 id="piloth3" class="desktop_h3">PILOT video</h3>
         <iframe
           id="desktop_pilot"
           width="560"
@@ -110,7 +110,7 @@
           href="https://www.youtube.com/embed/yjfvt-5zy64"
           >Click on me to go to the video</a
         >
-        <img class="border6" src="assets/border1.svg" alt="border1" />
+        <img class="border8" src="assets/border3.svg" alt="border3" />
       </article>
       <article class="triangle_down middle"></article>
       <article id="tema_2_5" class="no_triangle">
@@ -168,19 +168,19 @@
       </article>
       <article class="triangle_down"></article>
       <article id="tema_2_4" class="no_triangle">
-        <p class="to_right even">
+        <p class="odd">
           Jeg var på teams på dagen hvor vi skulle fremlægge fordi jeg stadig
           lod syg hjemme. Og det gik fint selvom det var lidt forvirrende. Det
           at skulle præsentere noget som har taget så lang tid og så mange
           overvejleser i så kort tid er meget svært. Jeg lærte der at komme ind
           til kærnen og udvlægle det vigtiste.
         </p>
-        <p class="odd">
+        <p class="to_right even">
           Pga. af sygdommen har jeg ikke lavet min side så god som jeg synes den
           kunne have været blevet. Den mangler noget mere responsivt kodning og
           sikkert noget mere css for at være pænere og mere funktionelt.
         </p>
-        <p class="to_right even">
+        <p class="odd">
           Vi brugte også for første gang et fælles git repo, det er meget
           spændende at se alle de mugligheder der er med den funktion. Det er
           helt klart et rigtig vigtigt værktøj som giver mange mugliheder og
@@ -190,9 +190,10 @@
       <article class="arrow_galleri">
         <a id="arrow8" class="arrow_down_link" href="#href_redesign"></a>
       </article>
-      <article class="triangle_up middle"></article>
-      <article id="href_redesign" class="triangle_middle index_article middle">
+      <article class="triangle_up middle2"></article>
+      <article id="href_redesign" class="triangle_middle index_article middle2">
         <a
+        id="redesignlink"
           class="linkmobile"
           href="https://valby-fodklinik-redesign.netlify.app/"
           >Link til redesignet website.
