--- a/tema2.html
+++ b/tema2.html
@@ -65,7 +65,7 @@
       <article class="triangle_down"></article>
       <article id="tema_2" class="no_triangle">
         <h2>Responsive site v2</h2>
-        <p class="to_left even">
+        <p class="to_right even">
           I tema 2: Grundlæggende web har vi lært basic html og css. Vi har lært
           hvordan man får et website til at være responsivt og brugervenligt ved
           brug af (good practice) html og css. Fx ved at have det rigtig html
@@ -80,7 +80,7 @@
           vscode og starte en mappe til at samle content og lave et styletile og
           i sidste ende at få det hele til at hænge sammen.
         </p>
-        <p class="to_left even">
+        <p class="to_right even">
           Jeg er blevet meget glad for det endelig resultat og det er også
           blevet godkendt. Det jeg ville ændre på opgaven med det vidne jeg har
           nu ville måske være at lave top nav’en mere responsivt.
@@ -90,7 +90,7 @@
           href="http://emsportfolio.dk/kea/02_web/04_responsive/responsive_site_v2/"
           >Link til websitet.</a
         >
-        <p class="to_left even">
+        <p class="to_right even">
           Et lille galleri med screenshots af processen og websitet.
         </p>
       </article>
