--- a/tema5.html
+++ b/tema5.html
@@ -161,6 +161,7 @@
       <article id="href_protoptype" class="triangle_up"></article>
       <article class="triangle_middle index_article">
         <a
+        id="pilotlink"
           class="linkmobile"
           href="https://docs.google.com/presentation/d/1TzKXD1-xXRF0GW1AzP8Y6vn7c-jhTiVg6qKu1jQzI-w/edit?usp=sharing"
           >Her er dokumentations slideshow</a
