dokumentation mobil done

--- a/dokumentation.html
+++ b/dokumentation.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dokumentation</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tema.css" />
+    <link rel="stylesheet" href="dokumentation.css" />
   </head>
   <body id="dokumentation">
     <header>
       <div id="headerid">
-          <div>
-        <a href="index.html"
-          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
-        /></a>
-        <a href="index.html"
-          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a></div>
+        <div>
+          <a href="index.html"
+            ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+          /></a>
+          <a href="index.html"
+            ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+          /></a>
+        </div>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -55,8 +58,123 @@
       </div>
       <div class="top_separator"></div>
     </header>
-    <main></main>
-     <footer>
+    <main>
+      <article class="triangle_middle index_article dokumentationtriangle">
+        <h1 class="number">0</h1>
+        <a id="two" class="index_link" href="tema5.html"
+          >Dokumen <br />
+          tation</a
+        >
+      </article>
+
+      <article id="dokcenter" class="no_triangle">
+        <h2>Portfolio</h2>
+        <p class="to_right even">
+          For Tema 6: Portfolio opgave har jeg valgt at bruge lidt af alle de
+          teknikker vi har lært i semestret. Jeg har siddet ned og lavet et
+          trello board for alle de opgaver jeg skulle og lavet også en timeline
+          med de samme opgaver som var klistret op på mit vindue så jeg kunne se
+          hver dag.
+        </p>
+        <p class="odd">
+          Jeg har valgt at fokusere først og fremmest på alt det forarbejde og
+          opsamling. Jeg har samlet alle de dokumenter jeg skulle bruge i
+          portfolio’en og har sat dem op i forskellige mapper. Jeg har derefter
+          skrevet udkast af alt det jeg skulle skrive om på sitet.
+        </p>
+        <p class="to_right even">
+          Så har jeg også sorteret alle de inspirationsmapper jeg har lavet i
+          løbet af semestret (både ressources og flotte sider) for at samle alle
+          de ideer jeg kunne tænke mig at bruge eller blive inspireret af.
+        </p>
+        <p class="odd">
+          Jeg har lavet forskellige farvepaletter og forskellige font pairings
+          og så valgte dem jeg skulle bruge. Jeg har downloadet fontene og
+          fundet hsla koderne for alle mine farver. Med alt det lavet jeg en
+          skitse af hvordan det skulle hænge sammen, en slags mix mellem
+          moodboard og styletile.
+        </p>
+        <p class="to_right even">
+          Jeg har så lavet et slags sitemap og tænkt på hvad for nogle sider jeg
+          skulle have og hvad de skulle hedde. Derefter tog jeg udgangspunkt i
+          det for at lave wireframes/layouts til alle de siderne. Både mobil og
+          desktop version.
+        </p>
+        <p class="odd">
+          Skelettet til min portfolio vscode mappe skulle så laves. Og med alle
+          de ting jeg har samlet i mapper er det nemt at bare sætte dem ind i
+          både html og css.
+        </p>
+        <p class="to_right even">
+          Parallelt har jeg eksperimenteret med noget css html og java i andre
+          mapper for at have koden til de funktioner jeg vil have i min side og
+          bare kunne copy/paste dem.
+        </p>
+        <p class="likmobile lilla">
+          Jeg har prøvet så vidt som muligt at undgå rod og har prøvet at bruge
+          alt det vi har lært på det semester.
+        </p>
+        <p class="to_right even">
+          Temaet for mit website er art nouveau selvom paletten jeg valgte var
+          ikke en af de art nouveau nogle jeg lavede og var så en af dem jeg har
+          lavet for at afspejle migselv. Jeg har så tegnet mine grafik elementer
+          og nogle knapper og ikoner.
+        </p>
+        <p class="odd">Jeg har så også lavet ”logo” samt favicon til siden.</p>
+        <p class="to_right even">
+          Med alle mine ideer og inspirationer har jeg valgt at vente til enden
+          for at tegne mit portræt for ”om mig” siden, det er en slags poetisk
+          måde for mig at afslutte projektet ved at tegne migselv i det nyeste
+          version af mig.
+        </p>
+        <p class="odd">
+          Al valg har taget meget tid og omsorg, jeg har brug ca. 80 af tiden på
+          ”forabejdet” og gennemtænke tingene.
+        </p>
+        <p class="to_right even">
+          Jeg har så også prøvet at dokumentere så meget som jeg kunne, for det
+          er en af de ting jeg har haft det sværeste med på studiet.
+        </p>
+
+        <img id="grafic3" src="assets/grafic3.svg" />
+      </article>
+      <article id="dokcenter2" class="triangle_middle index_article">
+        <a
+          class="even to_right"
+          href="https://xd.adobe.com/view/c147c2f7-4a0e-4db2-8251-6e9dbb69cd07-9414/?fullscreen"
+          >XD mobil prototype</a
+        >
+        <a
+          class="even to_right"
+          href="https://xd.adobe.com/view/63eada9a-2b41-41ff-ac62-74ef25c09549-36b9/"
+          >XD desktop prototype</a
+        >
+      </article>
+      <article id="mobile_galleri5" class="triangle_middle">
+        <figure>
+          <img src="content/dokumentation/img1.png" alt="img1" />
+        </figure>
+        <figure>
+          <img src="content/dokumentation/img2.png" alt="img2" />
+        </figure>
+        <figure>
+          <img src="content/dokumentation/img3.png" alt="img3" />
+        </figure>
+        <figure>
+          <img src="content/dokumentation/img4.png" alt="img4" />
+        </figure>
+        <figure>
+          <img src="content/dokumentation/img5.png" alt="img5" />
+        </figure>
+        <figure>
+          <img src="content/dokumentation/img6.png" alt="img6" />
+        </figure>
+      </article>
+      <article id="doksisdt" class="triangle_middle">
+        <img id="grafic2" src="assets/grafic2.svg" />
+      </article>
+    </main>
+    <footer>
       <div class="bottom_separator"></div>
       <div id="footerid">
         <div>
