dokumentation responsive and galleryndone

--- a/dokumentation.html
+++ b/dokumentation.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="tema.css" />
     <link rel="stylesheet" href="dokumentation.css" />
+    <link rel="stylesheet" href="galleries.css" />
   </head>
   <body id="dokumentation">
     <header>
@@ -83,7 +84,7 @@
           portfolio’en og har sat dem op i forskellige mapper. Jeg har derefter
           skrevet udkast af alt det jeg skulle skrive om på sitet.
         </p>
-        <img class=" to_left odd grafic3" src="assets/grafic3.svg" />
+        <img class="to_left odd grafic3" src="assets/grafic3.svg" />
         <p class="to_right even">
           Så har jeg også sorteret alle de inspirationsmapper jeg har lavet i
           løbet af semestret (både ressources og flotte sider) for at samle alle
@@ -129,7 +130,9 @@
           og nogle knapper og ikoner.
         </p>
         <img class="to_right grafic3" src="assets/grafic3.svg" />
-        <p class="to_left even">Jeg har så også lavet ”logo” samt favicon til siden.</p>
+        <p class="to_left even">
+          Jeg har så også lavet ”logo” samt favicon til siden.
+        </p>
         <img class="to_left odd grafic3" src="assets/grafic3.svg" />
         <p class="to_right even">
           Med alle mine ideer og inspirationer har jeg valgt at vente til enden
@@ -151,6 +154,7 @@
 
         <img id="grafic3" src="assets/grafic3.svg" />
       </article>
+
       <article id="dokcenter2" class="triangle_middle index_article">
         <a
           class="even to_right"
@@ -183,6 +187,19 @@
           <img src="content/dokumentation/img6.png" alt="img6" />
         </figure>
       </article>
+      <article class="triangle_middle desktop_h3 padding_top">
+        <div id="img_galleri5"></div>
+        <img class="border9" src="assets/border3.svg" alt="border3" />
+        <div id="arrow_system1">
+          <img id="arrow_left5" src="assets/arrow_left1.svg" alt="arrowleft1" />
+          <img src="assets/separator2.svg" alt="separator2" />
+          <img
+            id="arrow_right5"
+            src="assets/arrow_left2.svg"
+            alt="arrowleft2"
+          />
+        </div>
+      </article>
       <article id="doksisdt" class="triangle_middle">
         <img id="grafic2" src="assets/grafic2.svg" />
       </article>
@@ -201,5 +218,6 @@
       </div>
     </footer>
     <script src="script.js"></script>
+    <script src="gallerydok.js"></script>
   </body>
 </html>
