add om mig tegning + barrer les mots + desktop

--- a/aboutme.html
+++ b/aboutme.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About me</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tema.css" />
   </head>
   <body>
     <header>
       <div id="headerid">
-         <div>
-        <a href="index.html"
-          ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
-        /></a>
-        <a href="index.html"
-          ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
-        /></a></div>
+        <div>
+          <a href="index.html"
+            ><img id="logo_mobile" src="logo/logo_mobile.svg" alt="logo_mobile"
+          /></a>
+          <a href="index.html"
+            ><img id="logo_desktop" src="logo/logo.svg" alt="logo_desktop"
+          /></a>
+        </div>
         <nav>
           <ul class="burger_menu">
             <li><img src="logo/logo.svg" alt="logo_mobile" /></li>
@@ -55,8 +57,68 @@
       </div>
       <div class="top_separator"></div>
     </header>
-    <main></main>
-     <footer>
+    <main>
+      <article id="tema1" class="triangle_middle index_article">
+        <h1 class="number me">me</h1>
+        <a id="about" class="index_link about" href="aboutme.html">About</a>
+      </article>
+      <article class="triangle_down"></article>
+      <article id="tema_2_6" class="no_triangle">
+        <img src="content/om_mig/" alt="me" />
+      </article>
+      <article class="arrow_galleri">
+        <a id="arrow9" class="arrow_down_link" href="#"></a>
+      </article>
+      <article class="triangle_up middle"></article>
+      <article id="tema_2_7" class="triangle_middle middle">
+        <h2>about me</h2>
+        <p class="to_right even">
+          Jeg hedder Emma Pasquer og er halv franskmand halv dansker. Født og
+          opvokset i Frankrig og flyttet til Danmark i 2016 efter studieeksamen.
+        </p>
+        <p class="odd">
+          Jeg har altid været meget kreativ og kunstnerisk anlagt. Samtidigt har
+          jeg en meget firkantet hjerne, og kodningen er blevet noget meget
+          vigtigt for mig, på samme niveau som tegning. Det studie har været en
+          øjenåbner for mig, jeg føler jeg har fundet min hylde. For første gang
+          i mit liv er det sejt at være nerd. Yay.
+        </p>
+        <p class="to_right even">
+          Det barn jeg var ville nok være meget overrasket over hvem jeg er nu
+          og hvad jeg har tænkt mig at blive, men hun ville være stolt af mig.
+        </p>
+      </article>
+      <article id="abouttriangledown" class="triangle_down middle"></article>
+      <article id="tema_2_8" class="no_triangle">
+        <h2>PORTFOLIO AGTIG OM MIG</h2>
+        <p class="odd">
+          Emma Pasquer is a 23 yo geek aspiring designer and web dev based in
+          Copenhagen.
+        </p>
+        <p class="to_right even">
+          Emma is currently studying Multimedia Design @ KEA.
+        </p>
+        <p class="odd">
+          She enjoys the bad weather there and drinking coffee while wanting to
+          strangle perfect the projects she works on.
+        </p>
+        <p class="to_right even">
+          She is most often seen @ her fav coffee shop sipping beer coffee.
+        </p>
+        <p class="odd">
+          You can contact her here and here and maybe there (but not over
+          there).
+        </p>
+        <p class="to_right even">
+          If you have a cool project (then good for you) and you can notify me
+          here.
+        </p>
+        <a class="linkmobile" href="content/om_mig/cv.pdf"
+          >download MIT CV.
+        </a>
+      </article>
+    </main>
+    <footer>
       <div class="bottom_separator"></div>
       <div id="footerid">
         <div>
