--- a/tema5.html
+++ b/tema5.html
@@ -89,7 +89,7 @@
         >
       </article>
       <article class="arrow_galleri">
-        <a id="arrow6" class="arrow_down_link" href="#"></a>
+        <a id="arrow6" class="arrow_down_link" href="#youtube3"></a>
       </article>
       <article class="triangle_up middle"></article>
       <article id="youtube3" class="triangle_middle index_article middle">
@@ -161,7 +161,7 @@
       <article id="href_protoptype" class="triangle_up"></article>
       <article class="triangle_middle index_article">
         <a
-        id="pilotlink"
+          id="pilotlink"
           class="linkmobile"
           href="https://docs.google.com/presentation/d/1TzKXD1-xXRF0GW1AzP8Y6vn7c-jhTiVg6qKu1jQzI-w/edit?usp=sharing"
           >Her er dokumentations slideshow</a
@@ -194,7 +194,7 @@
       <article class="triangle_up middle2"></article>
       <article id="href_redesign" class="triangle_middle index_article middle2">
         <a
-        id="redesignlink"
+          id="redesignlink"
           class="linkmobile"
           href="https://valby-fodklinik-redesign.netlify.app/"
           >Link til redesignet website.
